--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -91,22 +91,14 @@
 			{{{body}}}
 		</div>
 
-		<div class="container mt4 mb4">
+		<div class="container mt4 mb4 hide">
 			<div id="footer" class="center">
         The Toilet Seat Project
 			</div>
 		</div>
-		{{!--
-			//- jQuery 1.11.1 is included by default, and required by both Bootstrap
-			//- and the KeystoneJS Content Editor. If you are not targeting IE8,
-			//- you can upgrade to 2.1.3 (also bundled) for better performance.
-		--}}
 		<script src="/js/jquery/jquery-1.11.2.min.js"></script>
-		{{!--
-			//- Customise which Bootstrap javascript files are served by including
-			//- them specifically here, instead of bootstrap-3.3.4.min.js
-		--}}
     <script src="/js/bootstrap/bootstrap-3.3.4.min.js"></script>
+    <script src="/js/index.js"></script>
 		{{{isAdminEditorJS user}}}
 	</body>
 </html>
