--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5872,12 +5872,9 @@ button.close {
   src: url("../fonts/montserrat-semibold/montserrat-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-semibold/montserrat-semibold.woff2") format("woff2"), url("../fonts/montserrat-semibold/montserrat-semibold.woff") format("woff"), url("../fonts/montserrat-semibold/montserrat-semibold.ttf") format("truetype"), url("../fonts/montserrat-semibold/montserrat-semibold.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
-body {
-  margin: 0px;
-  font-family: 'Montserrat-Regular'; }
-
-#footer {
-  color: #777777; }
+/* BASE CSS CLASSES ================================================ */
+.bold {
+  font-family: 'Montserrat-Semibold'; }
 
 .abs-center {
   position: absolute;
@@ -5887,13 +5884,30 @@ body {
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%); }
 
+.bind-width {
+  max-width: 1028px;
+  min-width: 680px; }
+
+/* MAIN ============================================================ */
+body {
+  margin: 0px;
+  font-family: 'Montserrat-Regular';
+  background-color: yellow;
+  min-width: 680px; }
+
 .bg {
   width: 100vw;
-  height: 100vh; }
+  height: 100vh;
+  z-index: -1;
+  top: 0px;
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -o-filter: blur(1px);
+  -ms-filter: blur(1px);
+  filter: blur(1px); }
 
 .bg:after {
   box-shadow: 0px 0px 12px #aaa;
-  border-bottom: 6px solid yellow;
   content: "";
   display: block;
   position: absolute;
@@ -5908,29 +5922,88 @@ body {
   z-index: -1; }
 
 .bg-overlay {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: black;
-  opacity: 0.15; }
+  opacity: 0.15;
+  z-index: -1; }
 
-.logo {
-  width: 220px;
-  height: auto; }
+#footer {
+  color: #777777; }
+
+/* LANDING BANNER ===================================================== */
+.front-page-content {
+  width: 85vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%); }
 
 .tagline {
   color: white;
-  font-size: 1.4em;
-  line-height: 1.4em; }
+  margin-bottom: 20px; }
+
+.tagline .main {
+  font-size: 5.8vw;
+  line-height: 6.2vw; }
+
+.tagline .sub {
+  margin-top: 10px;
+  font-size: 2vw;
+  line-height: 2vw; }
+
+.tagline .black-highlight {
+  display: inline-block;
+  border-bottom: 2px solid yellow;
+  background-color: black;
+  padding: 6px; }
+
+@media (max-width: 820px) {
+  .tagline .main {
+    font-size: 68px;
+    line-height: 68px; }
+  .tagline .sub {
+    font-size: 18px;
+    line-height: 18px; } }
+
+@media (max-width: 680px) {
+  .font-page-content {
+    left: inherit;
+    transform: translate(0%, -50%);
+    -webkit-transform: translate(0%, -50%);
+    -moz-transform: translate(0%, -50%); } }
+
+/* HEADER ====================================================  */
+.header {
+  width: 100vw;
+  top: 0px; }
+
+.header-content {
+  width: 85vw;
+  margin: 0 auto;
+  top: 0px; }
+
+.logo {
+  left: 0px;
+  height: 40px;
+  margin-top: 12px; }
+
+/* SUBSCRIBE ====================================================  */
+.subscribe-wrapper {
+  right: 0px;
+  top: 14px; }
 
 .subscribe-input {
   border-radius: 30px;
-  border: 3px solid yellow;
+  border: 2px solid yellow;
   background-color: transparent;
   color: yellow;
   text-align: center;
-  width: 100%;
   height: inherit !important;
-  font-family: 'Montserrat-Regular'; }
+  font-family: 'Montserrat-Regular';
+  width: 200px; }
 
 .subscribe-input:focus {
   outline: 0;
@@ -5938,7 +6011,7 @@ body {
 
 .subscribe-input[type="email"]::-webkit-input-placeholder {
   color: #eee;
-  line-height: 1.2em; }
+  line-height: 1.4em; }
 
 .subscribe-input[type="email"]:-moz-placeholder {
   /* Firefox 18- */
@@ -5957,8 +6030,8 @@ body {
 .subscribe-submit {
   border: 0px solid yellow;
   border-radius: 30px;
-  width: 38px;
-  height: 38px;
+  width: 33px;
+  height: 33px;
   vertical-align: top;
   color: yellow;
   font-size: 1.0em;
@@ -5979,14 +6052,15 @@ body {
   top: 0px;
   right: 0px; }
 
+/* SOCIAL MEDIA FOLLOW ICONS ======================================== */
 .social-icon {
-  width: 48px;
-  height: 48px;
+  width: 33px;
+  height: 33px;
   text-align: center;
-  line-height: 42px;
-  border-radius: 35px;
-  font-size: x-large;
-  border: 3px solid yellow;
+  line-height: 30px;
+  border-radius: 33px;
+  font-size: small;
+  border: 2px solid yellow;
   color: yellow; }
 
 .social-icon:hover {
@@ -6012,17 +6086,68 @@ body {
 
 .follow {
   padding-top: 20px;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  margin-left: 50px;
+  margin-right: 50px; }
 
 @media only screen and (max-device-width: 480px) {
-  .font-page-content {
+  .front-page-content {
     width: 85vw; } }
 
-/* ========================= */
-.gallery-image img {
-  display: block;
-  max-width: 100%;
-  height: auto; }
+/* GALLERY ================================================== */
+.blog-section {
+  margin-top: 100vh;
+  padding-top: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-top: 3px solid yellow;
+  min-height: 100vh; }
+
+.blog-wrapper {
+  width: 85vw;
+  margin: 0px auto;
+  padding: 20px 0 20px 0; }
+
+.blog-meta {
+  width: 9%;
+  vertical-align: top; }
+
+.blog-date {
+  background-color: black;
+  border-radius: 30px;
+  height: 48px;
+  line-height: 42px;
+  width: 48px;
+  color: white;
+  border: 3px solid black;
+  text-align: center; }
+
+.blog-post {
+  border-left: 6px solid black;
+  width: 88%; }
+
+.blog-body {
+  display: none; }
+
+.blog-title {
+  background-color: black;
+  color: white;
+  padding: 6px;
+  padding-right: 12px;
+  font-size: 30px; }
+
+.blog-footer {
+  background-color: black;
+  color: white;
+  padding: 3px;
+  font-size: 15px; }
+
+.blog-content {
+  margin-left: 16px;
+  margin-top: 16px;
+  margin-bottom: 16px; }
+
+.blog-main-image {
+  border-bottom: 3px solid yellow; }
 
 *::-webkit-input-placeholder {
   color: #aaa;
