--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -22,92 +22,113 @@
 </div>
 --}}
 
-<div class="bg relative">
-  <div class="bg-overlay absolute"></div>
-  <div class="font-page-content content center abs-center sm-col sm-col-6 md-col-5 lg-col-4">
-    <img class="logo mb2" img src="/images/bb_logo.png"/>
-    <div class="tagline h4">
-      <p>This is a story about building the <br>world's best toilet seat.</p>
+<div class="">
+
+  <div class="bg fixed"></div>
+
+  <div class="bg-overlay fixed"></div>
+
+  <!-- BANNER TEXT -->
+  <div class="front-page-content content bind-width">
+    <div class="tagline">
+      <div class="main">Our mission is to build the<br>
+        <em class="bold">WORLD'S BEST TOILET SEAT</em>
+      </div>
+      <div class="sub">
+        <div class="black-highlight">We spend so much time sitting on them, so lets make it enjoyable</div>
+      </div>
     </div>
-    <div class="follow tagline">
-      <p>Follow us on this journey!</p>
+  </div>
 
-      <!-- Begin MailChimp Signup Form -->
-      <div id="mc_embed_signup" class="mt2 mb2 ml4 mr4 h4">
-        <form action="http://thetoiletseatproject.us11.list-manage.com/subscribe/post?u=09cd7e50c69ae88f190c19ae2&amp;id=7485e5b4cb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll" class="relative">
-              
-            <div class="mc-field-group subscribe-input-wrapper">
-              <input autocomplete="off" placeholder="email address" type="email" value="" name="EMAIL" class="subscribe-input required email" id="mce-EMAIL">
+  <!-- HEADER -->
+  <div class="header fixed">
+    <div class="header-content bind-width relative">
+
+      <img class="inline-block logo mb2" img src="/images/bb_logo.png"/>
+
+      <div class="subscribe-wrapper absolute">
+
+        <div class="mt0 inline-block align-middle">
+          <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"> <i class="fa fa-instagram"></i></div></a>
+          <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"><i class="fa fa-facebook"></i></div></a>
+          <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"><i class="fa fa-envelope"></i></div></a>
+        </div>
+
+        <!-- Begin MailChimp Signup Form -->
+        <div id="mc_embed_signup" class="inline-block align-top">
+          <form action="http://thetoiletseatproject.us11.list-manage.com/subscribe/post?u=09cd7e50c69ae88f190c19ae2&amp;id=7485e5b4cb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll" class="relative">
+                
+              <div class="mc-field-group subscribe-input-wrapper">
+                <input autocomplete="off" placeholder="email address" type="email" value="" name="EMAIL" class="subscribe-input required email" id="mce-EMAIL">
+              </div>
+              <div class="clear subscribe-submit-wrapper absolute subscribe-submit-wrapper">
+                <input type="submit" value="&#xf054;" name="subscribe" id="mc-embedded-subscribe" class="subscribe-submit">
+              </div>
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;">
+                <input type="text" name="b_09cd7e50c69ae88f190c19ae2_7485e5b4cb" tabindex="-1" value="">
+              </div>
             </div>
-            <div class="clear subscribe-submit-wrapper absolute subscribe-submit-wrapper">
-              <input type="submit" value="&#xf054;" name="subscribe" id="mc-embedded-subscribe" class="subscribe-submit">
-            </div>
-            <div id="mce-responses" class="clear">
-              <div class="response" id="mce-error-response" style="display:none"></div>
-              <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;">
-              <input type="text" name="b_09cd7e50c69ae88f190c19ae2_7485e5b4cb" tabindex="-1" value="">
-            </div>
-          </div>
-        </form>
+          </form>
+        </div>
+
+        <!--End mc_embed_signup--> 
       </div>
-
-      <!--End mc_embed_signup--> 
-
-      <div class="mt0">
-        <a href="" target="_blank"><div class="ml2 mr2 mt2 social-icon inline-block circle white"> <i class="fa fa-instagram"></i></div></a>
-        <a href="" target="_blank"><div class="ml2 mr2 mt2 social-icon inline-block circle white"><i class="fa fa-facebook"></i></div></a>
-        <a href="" target="_blank"><div class="ml2 mr2 mt2 social-icon inline-block circle white"><i class="fa fa-envelope"></i></div></a>
-      </div>
-
     </div>
 
   </div>
 </div>
 
 
-  <!-- if galleries -->
-	{{#if galleries}}
-		{{#each galleries}}
-    <div class="mt2 mb4 container">
-      <div class="gallery mt4">
-        <div class="h2">{{ name }}</div>
-        <!--
-        <h2>{{name}}
-          <div class="text-muted">{{ publishedDate }}</div>
-        </h2>
-        -->
-        <div class="gallery-images">
+<!-- if galleries -->
+<div class="blog-section">
+  {{#if galleries}}
+    {{#each galleries}}
+    <div class="blog-wrapper mt4 bind-width">
+      <div class="blog-meta inline-block">
+        <div class="blog-date">{{ date format="MM.DD" }} </div> <!--{{ publishedDate }}</div>-->
+      </div>
+      <div class="blog-post inline-block">
+        <div class="blog-title inline-block">{{ name }}</div>
+        <div class="blog-body">
+          <div class="blog-content">
 
             {{#if heroImage}}
-            <img src="{{cloudinaryUrl heroImage }}" class="img-rounded">
+            <img src="{{cloudinaryUrl heroImage }}" class="blog-main-image">
             {{/if}}
 
             {{#if content}}
-            <div class="post-content mt2 mb2">
+            <div class="post-content mt2">
               {{{content}}}
             </div>
             {{/if}}
+          </div>
 
-            {{!--
-            <div class="col-sm-8 col-md-8">
-              <div class="row">
-                {{#each images}}
-                <div class="col-xs-4 col-sm-4 col-md-3 gallery-image">
-                  <img src="{{cloudinaryUrl width='300' height='300'}}" class="img-rounded">
-                </div>
-                {{/each}}
-              </div>
-            </div>
-            --}}
+          <div class="blog-footer inline-block"> - the bum bum team</div>
         </div>
       </div>
     </div>
-    <hr>
-		{{/each}}
-	{{else}}
-	<!-- else -->
-	<h3 class="text-muted">There are no image galleries yet.</h3>
-	{{/if}}
+    {{/each}}
+  {{else}}
+  <!-- else -->
+  <h3 class="text-muted">There are no image galleries yet.</h3>
+  {{/if}}
+</div>
+
+
+{{!--
+<div class="col-sm-8 col-md-8">
+  <div class="row">
+    {{#each images}}
+    <div class="col-xs-4 col-sm-4 col-md-3 gallery-image">
+      <img src="{{cloudinaryUrl width='300' height='300'}}" class="img-rounded">
+    </div>
+    {{/each}}
+  </div>
+</div>
+--}}
+
