--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -85,7 +85,8 @@
 
 
 <!-- if galleries -->
-<div class="blog-section">
+<div class="blog-section relative">
+  <div class="blog-header absolute"></div>
   {{#if galleries}}
     {{#each galleries}}
     <div class="blog-wrapper mt4 bind-width">
