--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -97,8 +97,8 @@ body {
   margin-bottom: 20px;
 }
 .tagline .main {
-  font-size: 5.8vw;
-  line-height: 6.2vw;
+  font-size: 5.4vw;
+  line-height: 5.8vw;
 }
 .tagline .sub {
   margin-top: 10px;
@@ -134,6 +134,7 @@ body {
 .header {
   width: 100vw;
   top: 0px;
+  z-index: 1000;
 }
 .header-content {
   width: 85vw;
@@ -145,7 +146,7 @@ body {
 .logo {
   left: 0px;
   height: 40px;
-  margin-top: 12px;
+  margin-top: 10px;
 }
 
 /* SUBSCRIBE ====================================================  */
@@ -258,10 +259,16 @@ body {
 
 .blog-section {
   margin-top: 100vh;
-  padding-top: 20px;
+  padding-top: 82px;
   background-color: rgba(255,255,255,0.9);
-  border-top: 3px solid yellow;
   min-height: 100vh;
+}
+.blog-header {
+  height: 60px;
+  background-color: black;
+  width: 100vw;
+  top: 0px;
+  border-top: 2px solid yellow;
 }
 .blog-wrapper {
   width: 85vw;
