--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -22,7 +22,7 @@
 </div>
 --}}
 
-<div class="">
+<div class=" relative ">
 
   <div class="bg fixed"></div>
 
@@ -35,7 +35,7 @@
         <em class="bold">WORLD'S BEST TOILET SEAT</em>
       </div>
       <div class="sub">
-        <div class="black-highlight">We spend so much time sitting on them, so lets make it enjoyable</div>
+        <div class="black-highlight">Sign up now and we'll let you know where you can try it!</div>
       </div>
     </div>
   </div>
@@ -46,37 +46,39 @@
 
       <img class="inline-block logo mb2" img src="/images/bb_logo.png"/>
 
-      <div class="subscribe-wrapper absolute">
+      <div class="subscribe-mobile-wrapper">
+        <div class="subscribe-wrapper ">
 
-        <div class="mt0 inline-block align-middle">
-          <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"> <i class="fa fa-instagram"></i></div></a>
-          <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"><i class="fa fa-facebook"></i></div></a>
-          <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"><i class="fa fa-envelope"></i></div></a>
+          <div class="mt0 inline-block align-middle">
+            <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"> <i class="fa fa-instagram"></i></div></a>
+            <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"><i class="fa fa-facebook"></i></div></a>
+            <a href="" target="_blank"><div class="mr2 social-icon inline-block circle white"><i class="fa fa-envelope"></i></div></a>
+          </div>
+
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup" class="inline-block align-top">
+            <form action="http://thetoiletseatproject.us11.list-manage.com/subscribe/post?u=09cd7e50c69ae88f190c19ae2&amp;id=7485e5b4cb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll" class="relative">
+                  
+                <div class="mc-field-group subscribe-input-wrapper">
+                  <input autocomplete="off" placeholder="email address" type="email" value="" name="EMAIL" class="subscribe-input required email" id="mce-EMAIL">
+                </div>
+                <div class="clear subscribe-submit-wrapper absolute subscribe-submit-wrapper">
+                  <input type="submit" value="&#xf054;" name="subscribe" id="mc-embedded-subscribe" class="subscribe-submit">
+                </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;">
+                  <input type="text" name="b_09cd7e50c69ae88f190c19ae2_7485e5b4cb" tabindex="-1" value="">
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <!--End mc_embed_signup--> 
         </div>
-
-        <!-- Begin MailChimp Signup Form -->
-        <div id="mc_embed_signup" class="inline-block align-top">
-          <form action="http://thetoiletseatproject.us11.list-manage.com/subscribe/post?u=09cd7e50c69ae88f190c19ae2&amp;id=7485e5b4cb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll" class="relative">
-                
-              <div class="mc-field-group subscribe-input-wrapper">
-                <input autocomplete="off" placeholder="email address" type="email" value="" name="EMAIL" class="subscribe-input required email" id="mce-EMAIL">
-              </div>
-              <div class="clear subscribe-submit-wrapper absolute subscribe-submit-wrapper">
-                <input type="submit" value="&#xf054;" name="subscribe" id="mc-embedded-subscribe" class="subscribe-submit">
-              </div>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;">
-                <input type="text" name="b_09cd7e50c69ae88f190c19ae2_7485e5b4cb" tabindex="-1" value="">
-              </div>
-            </div>
-          </form>
-        </div>
-
-        <!--End mc_embed_signup--> 
       </div>
     </div>
 
